# PDF2Mindmap

./: .gitignore  README.md  pyproject.toml
src/pdf2mindmap/main/: __main__.py  lecture_agent.py  mindmap_creator.py  streamlit_mindmap.py
src/pdf2mindmap/utils/: bundle_builder.py  constants.py  directory_reset.py  page_grouper.py  pdf_converter.py  prompts.py
