[project]
name = "PDF2Mindmap"
version = "0.1.0"
dependencies = [
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "pymupdf",
    "pymupdf-layout",
    "pymupdf4llm",
    "yfiles_graphs_for_streamlit",
    "hdbscan",
    "sentence-transformers"
]

[project.scripts]
summarize = "src.pdf2mindmap.main.__main__:main"

[tool.setuptools.packages.find]
where = ["."]